feat(Register) new textfields and functions in RegisterProvider

--- a/prueba_nolatech/pubspec.yaml
+++ b/prueba_nolatech/pubspec.yaml
@@ -38,6 +38,8 @@ dependencies:
   provider: ^6.1.2
   http: ^1.2.1
   google_fonts: ^6.2.1
+  getwidget: ^4.0.0
+  test: ^1.16.0
 
 dev_dependencies:
   flutter_test:
