--- a/prueba_nolatech/pubspec.yaml
+++ b/prueba_nolatech/pubspec.yaml
@@ -40,6 +40,8 @@ dependencies:
   google_fonts: ^6.2.1
   getwidget: ^4.0.0
   test: ^1.16.0
+  flutter_image_slideshow: ^0.1.6
+  like_button: ^2.0.5
 
 dev_dependencies:
   flutter_test:
