--- a/prueba_nolatech/pubspec.yaml
+++ b/prueba_nolatech/pubspec.yaml
@@ -42,6 +42,7 @@ dependencies:
   test: ^1.16.0
   flutter_image_slideshow: ^0.1.6
   like_button: ^2.0.5
+  dropdown_button2: ^2.3.9
 
 dev_dependencies:
   flutter_test:
