--- a/prueba_nolatech/pubspec.yaml
+++ b/prueba_nolatech/pubspec.yaml
@@ -43,6 +43,7 @@ dependencies:
   flutter_image_slideshow: ^0.1.6
   like_button: ^2.0.5
   dropdown_button2: ^2.3.9
+  intl: ^0.19.0
 
 dev_dependencies:
   flutter_test:
