--- a/prueba_nolatech/pubspec.yaml
+++ b/prueba_nolatech/pubspec.yaml
@@ -44,6 +44,8 @@ dependencies:
   like_button: ^2.0.5
   dropdown_button2: ^2.3.9
   intl: ^0.19.0
+  add_2_calendar: ^2.1.2
+
 
 dev_dependencies:
   flutter_test:
