--- a/prueba_nolatech/pubspec.yaml
+++ b/prueba_nolatech/pubspec.yaml
@@ -44,7 +44,7 @@ dependencies:
   like_button: ^2.0.5
   dropdown_button2: ^2.3.9
   intl: ^0.19.0
-  add_2_calendar: ^2.1.2
+  device_calendar: ^4.0.0
 
 
 dev_dependencies:
