--- a/prueba_nolatech/pubspec.yaml
+++ b/prueba_nolatech/pubspec.yaml
@@ -45,7 +45,7 @@ dependencies:
   dropdown_button2: ^2.3.9
   intl: ^0.19.0
   device_calendar: ^4.0.0
-
+  shared_preferences: ^2.2.3
 
 dev_dependencies:
   flutter_test:
